--- a/1/A/05.tex
+++ b/1/A/05.tex
@@ -4,9 +4,10 @@
 这个定律不仅能够说明行星和卫星的运动规律，而且能解释重力的产生和其他一些物理现象，更重要的是这个定律揭示了自然界中一种基本的相互作用力，标志着人类在认识自然的历史上迈出了重要的一步．由于万有引力定律的发现与行星运动的研究有着密切的关系，所以我们先讲一讲行星的运动．
 
 \section{行星的运动}
-在古代，人们从农牧业生产和航海的实际需要出发，就开始了对天体运动的观测和研究．我国在三千多年前的商代，根据对天体运动的观测制定了相当严密的历法．其他文明古国，如埃及、印度、巴比伦、希腊等，也在古代开始了对天体运动的研究．
+在古代，人们从农牧业生产和航海的实际需要出发，就开始了对天体运动的观测和研究．我国在三千多年前的殷代，根据对天体运动的观测制定了相当严密的历法．其他文明古国，如埃及、印度、巴比伦、希腊等，也在古代开始了对天体运动的研究．
 
-对于天体的运动，历史上有过地心说和日心说两种对立的看法，地心说认为地球是宇宙的中心，它是静止不动的，太阳、月球和其他行星都围绕地球运动．日心说则相反，认为地球和其他行星是围绕太阳旋转的．日心说不符合人们的日常经验，长期内很少有人相信．	
+对于天体的运动，历史上有过地心说和日心说两种对立的看法．
+地心说认为地球是宇宙的中心，它是静止不动的，太阳、月球和其他行星都围绕地球运动．日心说则相反，认为地球和其他行星是围绕太阳旋转的．日心说不符合人们的日常经验，长期内很少有人相信．	
 	
 公元二世纪的希腊天文学家托勒密使地心说发展和完善起来．
 由于地心说能解释一些天文现象，又符合人们的日常经验，而且完全符合天主教的思想：地球是宇宙的中心，宇宙万物都是上帝创造的．所以，地心说得到教会的支持，延续了一千多年之久．但是，随着生产和航海事业的发展，天文观测资料日益丰富，人们发现托勒密地心说的理论与实际观测的资料并不完全一致．
@@ -89,7 +90,8 @@
 
 开普勒研究了行星运动的轨道、周期和运动速率，回答了行星怎样运动的问题．然而为什么行星没有按照惯性做匀速直线运动，却围绕太阳旋转呢？十七世纪科学家们为了说明这个问题，提出了各种不同的看法．胡克等人认为，行星围绕太阳运动是因为受到了太阳对它的引力，并且猜想到引力的大小跟行星到太阳的距离的平方成反比，但是胡克没有能够从理论上证明这个猜想．
 
-彻底解决这个问题的人是牛顿，牛顿也认为太阳对行星
+彻底解决这个问题的人是牛顿．
+牛顿也认为太阳对行星
 的引力是行星围绕太阳运动的原因，并且运用开普勒定律和自己的力学成就，从理论上证明了引力跟距离的平方成反比．下面我们来看看牛顿是怎样证明的．
 
 行星运动的轨道是椭圆，但是这些椭圆都跟圆近似，为了使问题简化，可以认为行星都以太阳为圆心做匀速圆周运动．太阳对行星的引力$F$就是行星受到的向心力．如果行星的质量是$m$，轨道半径是$R$，公转周期是$T$，根据牛顿第二定律，引
@@ -144,7 +146,8 @@
 如图~\ref{fig_A_5-3} 所示，卡文迪许扭秤的主要部分是一个轻而坚固的T形架，倒挂在一根石英丝的下端．T形架水平杆的两端，各装一个质量是$m$的小球，
 在T形架的竖直杆上装一块小平面镜$M$，可以将射
 来的光线反射到一根刻度尺上．实验时，把两个质量是$m'$的大球放在图中所示的
-位置，它们跟小球的距离相等，由于$m$受到$m'$的吸引，石英丝被扭转，石英丝扭转的角度可以从小镜$M$的反射光在刻度尺上移动的距离求出，根据扭转角度就可以算出$m$与$m'$的引力$F$．在实验过程中，为了排除气流对测量结果的影响，卡文迪许把扭秤装置放到密闭室内，在室外用望远镜进行观测．
+位置，它们跟小球的距离相等．
+由于$m$受到$m'$的吸引，石英丝被扭转，石英丝扭转的角度可以从小镜$M$的反射光在刻度尺上移动的距离求出，根据扭转角度就可以算出$m$与$m'$的引力$F$．在实验过程中，为了排除气流对测量结果的影响，卡文迪许把扭秤装置放到密闭室内，在室外用望远镜进行观测．
 
 卡文迪许经过多次实验，证明了牛顿的万有引力定律是正确的，并且测出了万有引力常量．
 如果质量的单位用千克，距离的单位用米，力的单位用牛顿，卡文迪许测得的引力常量是$6.754\times 10^{-11} \UNmqkgq$，同现代公认的$G$等于$6.67\times 10^{-11}\UNmqkgq$很接近．这个数值等于两个质量各为1千克的物体，相距1米时的相互吸引力．
@@ -159,7 +162,7 @@
 	\item 你能说出你对地球的引力是多少吗？
 \item “我们说苹果落向地球，而不说地球向上运动碰到苹果，是因为地球的质量比苹果大得多，地球对苹果的引力比苹果对地球的引力大得多．”这种说法对吗？为什么？
 \item 两个质量都是4千克的铅球，相距0.1米远，它们之间的引力是多少？
-\item 用$M$表示地球的质量，$R$表示地球的半径，$T$表示月球到地球的距离．试证明，在地球引力作用下，
+\item 用$M$表示地球的质量，$R$表示地球的半径，$r_{\text{月地}}$表示月球到地球的距离．试证明，在地球引力作用下，
 \begin{enumerate}
 	\item \label{exe_A_5-2-4.1} 
 	 地面上物体的重力加速度$g=\dfrac{GM}{R^2}$；
@@ -194,7 +197,7 @@
 
 测出$r$和$T$，就可以算出天体质量$M$的大小．例如，地球绕太阳公转轨道的半径是$1.49\times 10^{11}$米，公转的周期是$3.16\times 10^7$秒，所以太阳的质量为
 \[\begin{split}
-M&= \frac{4\times 3.14^2\times (1.49\times 10^{11})^2}{6.67\times 10^{-11}\times (3.16\times 10^7)^2} \Ukg\\
+M&= \frac{4\times 3.14^2\times (1.49\times 10^{11})^3}{6.67\times 10^{-11}\times (3.16\times 10^7)^2} \Ukg\\
 &=1.96\times 10^{30} \Ukg
 \end{split} \]
 
@@ -234,17 +237,21 @@ M&= \frac{4\times 3.14^2\times (1.49\times 10^{11})^2}{6.67\times 10^{-11}\times
 在不同纬度的地方，物体做匀速圆周运动的角速度$\omega$相同，而圆周的半径$r$不同，这个半径在赤道处最大，在两极最小（等于零）．
 由$f=m\omega^2 r$可以知道，同一个物体随着地球自转所需的向心力，在不同纬度的地方是不同的，它随着纬度的增加而减小：在赤道最大，在两极最小（等于零）．
 
-除此之外，还应该考虑到地球并不是一个理想的球体，而是一个不大规则的椭球，它的极半径是6357千米，赤道半径是6378千米，由于极半径比赤道半径小一些，根据引力与距离平方成反比的定律，物体所受的引力在赤道上最小，随着纬度的增加而增大，在两极达到最大．
+除此之外，还应该考虑到地球并不是一个理想的球体，而是一个不大规则的椭球，它的极半径是6357千米，赤道半径是6378千米．
+由于极半径比赤道半径小一些，根据引力与距离平方成反比的定律，物体所受的引力在赤道上最小，随着纬度的增加而增大，在两极达到最大．
 
 从上面的讨论可以看出，物体在赤道上所受的引力最小，需要的向心力最大；随着纬度的增加，物体受的引力增大，需要的向心力减小；在两极引力最大，需要的向心力减小到零．所以地面上同一个物体的重量，从赤道到两极是逐渐增大的．
 
-我们知道，物体的重量等于$mg$，所以物体的重量从赤道到两极逐渐增大表示重力加速度$g$从赤道到两极逐渐增大．
+我们知道，物体的重量等于$mg$．
+所以物体的重量从赤道到两极逐渐增大表示重力加速度$g$从赤道到两极逐渐增大．
 
 同样，根据万有引力定律知道，在同一纬度，物体的重量和重力加速度$g$的数值，还随着离地面高度的增加而减小．
 
-不过在地面附近，$g$的数值和物体的重量随纬度和离地面高度的不同而改变的量是很小的，重力加速度$g$的数值，在赤道上约为$9.78 \Umsq$，在两极约为$9.83 \Umsq$．把赤道上的物体移到两极，增加的重量大约只有原来重量的千分之五．把地面上的物体升高1千米，减小的重量不超过原来重量的万分之三．所以在一般的粗略计算中，$g$和物体重量的变化可以忽略不计．
+不过在地面附近，$g$的数值和物体的重量随纬度和离地面高度的不同而改变的量是很小的．
+重力加速度$g$的数值，在赤道上约为$9.78 \Umsq$，在两极约为$9.83 \Umsq$．把赤道上的物体移到两极，增加的重量大约只有原来重量的千分之五．把地面上的物体升高1千米，减小的重量不超过原来重量的万分之三．所以在一般的粗略计算中，$g$和物体重量的变化可以忽略不计．
 
-此外，物体的重量还受到地质结构的影响，例如，在埋藏着密度较大的矿石的地区，物体的重量就要比周围地区稍大一些，也就是说，这一地区的重力加速度要比周围地区稍大一
+此外，物体的重量还受到地质结构的影响．
+例如，在埋藏着密度较大的矿石的地区，物体的重量就要比周围地区稍大一些，也就是说，这一地区的重力加速度要比周围地区稍大一
 些．重力加速度的这种变化虽然很小，却是可以测出来的．根据这种重力异常现象，可以探测地下的矿床，这种探矿方法叫
 做重力探矿，是一种很重要的探矿方法．
 
@@ -270,7 +277,7 @@ M&= \frac{4\times 3.14^2\times (1.49\times 10^{11})^2}{6.67\times 10^{-11}\times
 卫星做匀速圆周运动所需要的向心力是地球对它的引力，即
 \[G\frac{Mm}{r^2}=m\frac{v^2}{r},\qquad v=\sqrt{\frac{GM}{r}} \]
 
-从上式可以看出，$r$越大，即卫星离地面越高，它环绕地球运动的速度$v$越小．对于靠近地面运转的卫星，可以认为$r$差不多等于地球的半径$R_{\text{地}}$．地球对卫星的引力差不多等于
+从上式可以看出，$r$越大，即卫星离地面越高，它环绕地球运动的速度$v$越小．对于靠近地面运转的卫星，可以认为$r$差不多等于地球的半径$R_{\text{地}}$，地球对卫星的引力差不多等于
 卫星的重量$mg$．从
 \[mg=m\frac{v^2}{R_{\text{地}}} \]
 可以得到
@@ -294,7 +301,8 @@ M&= \frac{4\times 3.14^2\times (1.49\times 10^{11})^2}{6.67\times 10^{-11}\times
 
 \subsection{人造地球卫星中的超重和失重}
 
-在第\ref{chapter-law-of-motion}章里，我们已经学过超重和失重现象，现在我们再来谈谈人造卫星中的超重和失重．
+在第\ref{chapter-law-of-motion}章里，我们已经学过超重和失重现象．
+现在我们再来谈谈人造卫星中的超重和失重．
 
 卫星发射时在加速升高的过程中，以及卫星再进入大气层向下降落的减速过程中，都有一个向上的加速度，这时就发生超重现象．
 这时宇宙飞行员的身体像是被一个很大的压力压住，动弹不得，想举起手来，也很困难．
@@ -328,7 +336,8 @@ M&= \frac{4\times 3.14^2\times (1.49\times 10^{11})^2}{6.67\times 10^{-11}\times
 以监视各种变化，及时设法处理．在卫星上安装勘察矿产资源的遥感设备，不仅可以勘察地球表面，而且可以勘察地下的铁、钴、镍、铜、石油等多种矿藏．电视教育是多快好省地培养人才的一种手段，但是按过去的办法靠发射台和中继站传播，每隔50千米就要建设一个中继站，消耗大量的人力物力．如果用通讯卫星，像我们这样幅员广阔的国家，只要一颗卫星，全国的边远地区也都可以收看．目前我国正在积极准备发射通讯卫星．
 用火箭把几吨的货物送到绕地球运行的空间站上去，可以在宇宙空间建设现代化的实验室，装备复杂、精密的仪器设备，进行失重、超高真空等条件下的物理、化学、生物、医学实验．
 
-航天时代正在到来，在这个新时代里，不畏险阻，勇攀科学高峰的青年们是可以大有作为的．	
+航天时代正在到来．
+在这个新时代里，不畏险阻，勇攀科学高峰的青年们是可以大有作为的．	
 	
 \subsection*{练习四}
 
@@ -359,7 +368,7 @@ M&= \frac{4\times 3.14^2\times (1.49\times 10^{11})^2}{6.67\times 10^{-11}\times
 
 \section*{习题}
 \begin{enumerate}
-	\item 在一次测定引力常量的实验里，已知一个质量是0.80千克的球，以$1.0\times 10^{-10}$牛的力吸引另一个质量是$4.0\times 10^{-3}$千克的球．这两个球相距$4.0\times 10^{-2}$米．地球表面的重力加速度是9.8$\Umsq$，地球的半径是6400千米．根据这些数据计算地球的质量．
+	\item 在一次测定引力常量的实验里，已知一个质量是0.80千克的球，以$1.3\times 10^{-10}$牛的力吸引另一个质量是$4.0\times 10^{-3}$千克的球．这两个球相距$4.0\times 10^{-2}$米．地球表面的重力加速度是9.8$\Umsq$，地球的半径是6400千米．根据这些数据计算地球的质量．
 	\item 行星的质量为$M$，一个围绕它作匀速圆周运动的卫星的轨道半径是$R$，周期是$T$．试用两种方法求出卫星轨道上的向心加速度．	
 	\item 应用通讯卫星可以实现全地球的电视转播．这种卫星位于赤道的上方，相对于地面静止不动，犹如悬在空中一样，叫做同步卫星．同步卫星的周期是多大？计算它的高度和速率．
 	\item 试用万有引力定律证明：对于某个行星的所有卫星来说，$R^3/T^2$是一个恒量．其中$R$是卫星的轨道半径，$T$是卫星的运行周期．
