--- a/1/A/06.tex
+++ b/1/A/06.tex
@@ -11,7 +11,10 @@
 在设计桥梁、起重机、建筑物时，必须分析它们各部分的受力情况，然后根据平衡条件来进行计算，以便确定几何尺寸或选择合适的材料．
 
 \section{在共点力作用下物体的平衡}
-受共点力作用的物体在什么条件下才能保持平衡呢？在两个共点力作用下物体的平衡条件，我们在初中已经学过，并且前面也用过了．
+
+受共点力作用的物体在什么条件下才能保持平衡呢？
+
+在两个共点力作用下物体的平衡条件，我们在初中已经学过，并且前面也用过了．
 物体受到两个共点力的时候，只有这两个力大小相等方向相反，物体才保持平衡状态．
 从力的合成法则知道，这时合力等于零．可见，在两个共点力作用下物体的平衡条件是这两个力的合力等于零．
 \begin{figure}[htbp]
@@ -62,7 +65,8 @@
         \caption{}\label{fig_A_6-3}
     \end{minipage}
 \end{figure}
-    \item 掘沟机由两台拖拉机牵引（图~\ref{fig_A_6-4}），两条绳索对掘沟机的拉力都是$2.5\times 10^4$牛，绳索间的夹角为60$^\circ$，如果拖拉机是匀速行进的，土地的阻力有多大？
+    \item 掘沟机由两台拖拉机牵引（图~\ref{fig_A_6-4}），两条绳索对掘沟机的拉力都是$2.5\times 10^4$牛，绳索间的夹角为60$^\circ$．
+    如果拖拉机是匀速行进的，土地的阻力有多大？
 
     \item 如图~\ref{fig_A_6-5} 所示，物体在五个共点力的作用下保持平衡．如果撤去力$F_5$，而保持其余四个力不变，这四个力的合力的大小和方向是怎样的？
 \begin{figure}[htbp]
@@ -84,15 +88,16 @@
 \subsection{转动}
 
 转动是一种常见的运动．物体在转动的时候，它的各点都做圆周运动，这些圆周的中心在同一直线上，这条直线叫做\NoteBold{转动轴}．
-\begin{figure}[htbp]
-    \centering
-    \includegraphics{fig/A/6-6.pdf}
-    \caption{同一时间内，离转动轴远近不同的各点，通过长度不同的弧}\label{fig_A_6-6}
-\end{figure}
+
 
 从图~\ref{fig_A_6-6} 可以看到，转动物体上离转动轴远近不同的点$A_1$、$A_2$、$A_3$在同一时间内，通过长度不同的弧$A_1B_1$、$A_2B_2$、$A_3B_3$．离转动轴越远的点，通过的弧越长．
 但是连接$A_1$、$A_2$、$A_3$和圆心$O$的半径转过的角度是相等的．
 可见，转动物体上离转动轴远近不同的点，线速度不同，而角速度相同．
+\begin{figure}[htbp]
+	\centering
+	\includegraphics{fig/A/6-6.pdf}
+	\caption{同一时间内，离转动轴远近不同的各点，通过长度不同的弧}\label{fig_A_6-6}
+\end{figure}
 
 我们知道，平动物体上各点的速度都相同，任何一点的速
 度都可以代表整个物体的速度．同样，转动物体上各点的角速度都相同，任何一点的角速度都可以代表整个物体的角速度．因此，研究物体的转动，常用角速度表示转动的快慢．
@@ -152,17 +157,18 @@
 可以发现，使圆盘向顺时针方向转动的力矩之和等于使圆盘向反时针方向转动的力矩之和，即
 \[M_1+M_2=M_3\]
 
-改变力和力臂，再做这个实验，可以得到同样的结果．在有固定转动轴的物体上，如果所有向时针方向转动的力矩之和等于所有向反时针方向转动的力矩之和，或者考虑到力矩的正负，所有力短的代数和为零，那么，物体将处于平衡状态．
+改变力和力臂，再做这个实验，可以得到同样的结果．在有固定转动轴的物体上，如果所有向时针方向转动的力矩之和等于所有向反时针方向转动的力矩之和，或者考虑到力矩的正负，所有力矩的代数和为零，那么，物体将处于平衡状态．
 
 结论：\NoteBold{有固定转动轴的物体的平衡条件是力矩的代数和等于零}，即
-\[M_1+M_2+M_3\cdots=0 \]
+\[M_1+M_2+M_3+\cdots=0 \]
 或者
 \[M_{\text{合}}=0\]
 
 \subsection*{练习二}
 
 \begin{enumerate}
-    \item 当我们开关门窗时，如果力的作用线通过转轴，无论多大的力也不能把门窗打开或关上，为什么？
+    \item 当我们开关门窗时，如果力的作用线通过转轴，无论多大的力也不能把门窗打开或关上．
+    为什么？
     \item 如图~\ref{fig_A_6-9} 所示，加在自行车脚踏板上的向下的力是15牛，求这个力的力矩．
     
    \begin{figure}[htbp]
@@ -246,7 +252,7 @@
 
 
 
-如果有几个力偶作用在物体上，那么这几个力偶共同对物体的转动作用决定干它们的力偶矩的代数和．力偶矩的代数和不等于零，角速度将发生改变，物体做变速转动；力偶矩的代数和等于零，物体将用原来的角速度转动或者保持静止．因此，在力偶作用下物体的平衡条件是力偶矩的代数和等于零．
+如果有几个力偶作用在物体上，那么这几个力偶共同对物体的转动作用决定于它们的力偶矩的代数和．力偶矩的代数和不等于零，角速度将发生改变，物体做变速转动；力偶矩的代数和等于零，物体将用原来的角速度转动或者保持静止．因此，在力偶作用下物体的平衡条件是力偶矩的代数和等于零．
 
 \subsection*{练习三}
 \begin{enumerate}
@@ -258,16 +264,13 @@
 \section{平衡的种类}
 一只茶杯很容易放在桌面上保持平衡．这时茶杯受到竖
 直向下的重力和竖直向上的支持力，二者大小相等方向相反，茶杯处于平衡状态．
-把铅笔削尖，使铅笔尖端朝下立在桌面上保持平衡，从道理上讲是可以实现的，只要使铅笔所受重力的作用线绝对准确地通过铅笔尖跟桌面接触的那一点，从而使重力和支持力大小相等方向相反而且作用在一条直线上，铅笔就处于平衡位置，就应该立得住．
-道理上是如此，事实上却很难实现．我们很难使铅笔绝对准确地处在平衡位置；即使千方百计使铅笔达到了平衡位置，也避免不了各种各样的偶然因素，如微风的吹拂或桌面的轻微振动，使铅笔稍微偏离平衡位置．
+把铅笔削尖，使铅笔尖端朝下立在桌面上保持平衡，从道理上讲是可以实现的．
+只要使铅笔所受重力的作用线绝对准确地通过铅笔尖跟桌面接触的那一点，从而使重力和支持力大小相等方向相反而且作用在一条直线上，铅笔就处于平衡位置，就应该立得住．
+道理上是如此，事实上却很难实现．我们很难使铅笔绝对准确地处在平衡位置；即使千方百计使铅笔达到了平衡位置，也避免不了各种各样的偶然因素，如微风的吹拂或桌面的轻微振动，使铅笔稍微偏离平衡位置，
 而且一旦偏离这个位置，在重力的作用下偏离就会越来越大，铅笔就要倾倒．
 茶杯在桌面上的平衡，铅笔尖端朝下立在桌面上的平衡，这两种情况显然不同．
 通常我们说前者的平衡是稳定的，后者的平衡是不稳定的．同样是达到了平衡，还有一个平衡是否稳定的问题．
-\begin{figure}[htbp]
-    \centering
-    \includegraphics{fig/A/6-16.pdf}
-    \caption{有支点的物体的平衡}\label{fig_A_6-16}
-\end{figure}
+
 
 图~\ref{fig_A_6-16} 表示放在凹面底部、凸面顶部和平面上的小球，它们所受的重力和支持力大小相等方向相反，都处在平衡位置．
 前面说过，各种各样的偶然因素会使物体稍微偏离平衡位置，使平衡遭到破坏．
@@ -279,6 +282,12 @@
 从图~\ref{fig_A_6-16} 看出，这时重心和支持力的合力是指向远离平衡位置的方向的，这种平衡其实很难实现，叫做\NoteBold{不稳平衡}．
 平面上的小球偏离原来的位置之后，重心的高度不变，重力和支持力依然保持平衡，也就是说，小球在平面的任何位置都能平衡．
 这种平衡叫做\NoteBold{随遇平衡}．
+\begin{figure}[htbp]
+	\centering
+	\includegraphics{fig/A/6-16.pdf}
+	\caption{有支点的物体的平衡}\label{fig_A_6-16}
+\end{figure}
+
 
 上面讨论了有支点的物体的平衡，这对有支轴的物体的平衡也是正确的．图~\ref{fig_A_6-17} 表示有支轴的物体的三种平衡情况．在这三种情况中重力的作用线都通过支轴，力矩为零，物体都处于平衡位置．在第一种情形里，物体的重心在支轴的正下方，物体稍微偏离平衡位置之后，重心升高，重力的力矩将使物体回到原来的位置，恢复平衡，因而属于稳定平衡．在第二种情形里，物体的重心在支轴的正上方，稍微偏离平衡位置之后，重心降低，重力的力矩将使物体继续远离原来的位置而不能恢复平衡，这种平衡也很难实现，属于不稳平衡．在第三种情形里，物体的重心就在支轴上，物体偏离原来的位置
 之后，重心的高度不变，重力的力矩仍旧为零，物体在任何位置都能平衡，因而属于随遇平衡．
@@ -315,14 +324,15 @@
 竖放的砖容易使它的重力作用线超出支面，容易倾倒，稳定程度较小；平放的砖不容易使它的重力作用线超出支面，不容易倾倒，稳定程度较大．
 
 稳定程度的大小通常用\NoteBold{稳度}来表示．稳度的大小跟物体重心的高低和支面的大小都有关系．
+
+
+拿两个支面大小相同而重心高度不同的长方体来．
+如果使它们倾斜某一相同的角度（图~\ref{fig_A_6-19}），可以看到：重心低的长方体的重力作用线可以仍旧通过支面，而重心高的长方体的重力作用线不再通过支面．可见，物体的重心越低，稳度越大．
 \begin{figure}[htbp]
 	\centering
 	\includegraphics{fig/A/6-19.pdf}
 	\caption{重心越低，稳度越大}\label{fig_A_6-19}
 \end{figure}
-
-拿两个支面大小相同而重心高度不同的长方体来，如果使它们倾斜某一相同的角度（图~\ref{fig_A_6-19}），可以看到：重心低的长方体的重力作用线可以仍旧通过支面，而重心高的长方体的重力作用线不再通过支面．可见，物体的重心越低，稳度越大．
-
 
 再拿两个重心高度相同而支面大小不同的长方体来．如果使它们倾斜某一相同的角度（图~\ref{fig_A_6-20}），可以看到：支面大的长方体的重力作用线可以仍旧通过支面，而支面小的长方体的重力作用线不再通过支面．可见，物体的支面越大，稳度越大．
 \begin{figure}[htbp]
@@ -356,7 +366,7 @@
 \begin{enumerate}
     \item 背上背着重东西的人，为什么要向前倾？
     \item 老年人扶手杖走路为什么不容易跌倒？
-    \item 用载重汽车装运木箱，一些木箱装的是铁钉，另一些木箱装的是铝制器皿．怎祥装木箱，汽车的稳度比较大？
+    \item 用载重汽车装运木箱，一些木箱装的是铁钉，另一些木箱装的是铝制器皿．怎样装木箱，汽车的稳度比较大？
     \item 下列情况是哪类平衡？
     \begin{enumerate}
         \item 体操运动员在吊环上做倒立；
@@ -380,7 +390,10 @@
 
 \section*{习题}
 \begin{enumerate}
-    \item 图~\ref{fig_A_6-22} 表示一种简易起重机，$OA$是钢绳，跟水平方向成30$^\circ$角，$OB$是撑杆，跟水平方向成60$^\circ$角，提起的货物重$5.0\times 10^3$牛．求钢绳对货物的拉力和撑杆对货物的支持力．
+    \item 图~\ref{fig_A_6-22} 表示一种简易起重机．
+    $OA$是钢绳，跟水平方向成30$^\circ$角．
+    $OB$是撑杆，跟水平方向成60$^\circ$角．
+    提起的货物重$5.0\times 10^3$牛．求钢绳对货物的拉力和撑杆对货物的支持力．
 \begin{figure}[htbp]
     \centering
     \includegraphics{fig/A/6-22.pdf}
@@ -404,7 +417,8 @@ F_2&=\frac{\sin 120^{\circ}}{\sin 30^{\circ}}F=8.5\times 10^3 \UN
 这个题也可以用力的分解来求解．但是求解物体平衡的问题，一般还是应用平衡条件为好，因为不管受力情况怎样复杂，平衡条件都适用．
 \end{solution}
 
-\item 图~\ref{fig_A_6-23} 中的$AC$和$BC$是固定在电线杆上的铁棍，$AC$长0.9米，$BC$长1.2米，$AB$之间的距离是0.6米．
+\item 图~\ref{fig_A_6-23} 中的$AC$和$BC$是固定在电线杆上的铁棍，$AC$长0.9米，$BC$长1.2米．
+$AB$之间的距离是0.6米．
 在$C$处挂一盏重20牛的街灯．
 求$AC$对街灯的拉力和$BC$对街灯的支持力．
 
@@ -444,9 +458,12 @@ F_2&=\frac{\sin 120^{\circ}}{\sin 30^{\circ}}F=8.5\times 10^3 \UN
 \item 放在斜面上的一个物体，当斜面倾角为$\theta$时，它沿着斜面匀速下滑．试证明物体和斜面之间的滑动摩擦系数$\mu=\tan \theta$．
 \item 如果天平的两臂并不完全相等，可以采取所谓复称法求得物体的真实质量$m$．先把物体放在左盘，砝码放在右盘，天平平衡时砝码的质量是$m_1$．然后把物体放在右盘，砝码放在左盘，天平平衡时砝码的质量是$m_2$．试证明物体的真实质量$m=\sqrt{m_1m_2}$．
 \item 无风的时候竖直下落的雨滴受到两个力的作用：重力、空气阻力．设空气阻力$f$与雨滴下落的速度$v$成正比，即$f=kv$．开始下落时雨滴的速度较小，空气阻力也较小，雨滴加速下落，速度随来越大．随着速度的增大，空气阻力也增大．
-当空气阻力增大到与重力平衡时，雨滴就以一定的速度匀速下落．这个速度叫做极限速度或收尾速度，设雨滴的质量为$m$，试证明雨滴的极限速度$v=mg/k$．
+当空气阻力增大到与重力平衡时，雨滴就以一定的速度匀速下落．这个速度叫做极限速度或收尾速度．
+设雨滴的质量为$m$，试证明雨滴的极限速度$v=mg/k$．
 \item 降落伞由于受到水平方向的风力而沿着跟竖直方向成30$^\circ$角的方向匀速下降，降落伞和人共重700牛，求降落伞所受的空气的阻力．
-\item 图~\ref{fig_A_6-25} 是一台起重机的示意图，机身和平衡体的重量$G_1=4.2\times 10^5$牛，起重杆的重量$G_2=2.0\times 10^4$牛，其他数据如图中所示．起重机至多能提起多重的货物．
+\item 图~\ref{fig_A_6-25} 是一台起重机的示意图．
+机身和平衡体的重量$G_1=4.2\times 10^5$牛．
+起重杆的重量$G_2=2.0\times 10^4$牛，其他数据如图中所示．起重机至多能提起多重的货物．
 \begin{figure}[htbp]
     \centering
     \includegraphics{fig/A/6-25.pdf}
@@ -454,7 +471,7 @@ F_2&=\frac{\sin 120^{\circ}}{\sin 30^{\circ}}F=8.5\times 10^3 \UN
 \end{figure}
 提示：这时起重机以$O$为转动轴而保持平衡．
 
-\item  图~\ref{fig_A_6-26} 是一把杆秤，提扭和挂钩的距离$OB$是6.0厘米，秤锤的质量是1.2斤．不称物体时，把秤锤挂在$A$点，杆秤平衡，$A$点就是刻度的起点．
+\item  图~\ref{fig_A_6-26} 是一把杆秤．提扭和挂钩的距离$OB$是6.0厘米，秤锤的质量是1.2斤．不称物体时，把秤锤挂在$A$点，杆秤平衡，$A$点就是刻度的起点．
 设$OA$为1.6厘米，杆秤的质量为0.48斤，求杆秤的重心．在称某一物体时，秤锤移到$D$点后杆秤平衡，$AD$为24厘米，所称物体的质量是多少？
 \begin{figure}[htbp]
     \centering
