--- a/fig/A/3-7.tex
+++ b/fig/A/3-7.tex
@@ -12,8 +12,8 @@
   % \useasboundingbox(-2.65,-1.95)rectangle(0.65,1.35);
   \draw[->,  thick](0,0)--(4,0)node [below]{$a_1$};
   \draw[->,  thick](0,0)--(6,0)node [below]{$F_1$};
-  \draw[->,  thick](0,0)--(2,4)node [left]{$a_2$};
-  \draw[->,  thick](0,0)--(3,6)node [left]{$F_2$};
+  \draw[->,  thick](0,0)--(2,4)node [left=0.1]{$a_2$};
+  \draw[->,  thick](0,0)--(3,6)node [left=0.1]{$F_2$};
   \draw[dashed](6,4)--(2,4);
   \draw[dashed](9,6)--(3,6);
   \draw[dashed](6,4)--(4,0);
