--- a/fig/A/6-22.tex
+++ b/fig/A/6-22.tex
@@ -13,10 +13,10 @@
   \draw [ thick](30:4)--(2*1.732-2/1.732,0)node[below]{$B$};
   \draw [very thick, ->] (30:4)--(2*1.732, 2-.75)node[right]{$F$};
   \draw [very thick, ->] (30:4)--(2*1.732, 2+.75)node[above]{$F'$};
-  \draw [very thick, ->] (30:4)--(30:4-.75)node[left]{$F_1$};
+  \draw [very thick, ->] (30:4)--(30:4-.75)node[above left]{$F_1$};
   \draw [dashed] (30:4-.75)--(2*1.732, 2+.75);
-  \draw (.7,0) arc (0:30:.7) node[midway,right]{\ang{30}};
-  \draw (2*1.732-2/1.732+.5,0) arc (0:60:.5) node[midway,right]{\ang{60}};
+  \draw (.7,0) arc (0:30:.7) node[midway,above right,yshift=-3.5]{\ang{30}};
+  \draw (2*1.732-2/1.732+.5,0) arc (0:60:.5) node[midway,right,yshift=1.5]{\ang{60}};
   \draw [very thick, ->] (30:4)--(2*1.732+0.375*1.732, 2+.75*1.5)node[right]{$F_2$};
   \draw [dashed] (2*1.732, 2+.75)--(2*1.732+0.375*1.732, 2+.75*1.5);
   \draw  (30:4)--(2*1.732, 2-1);
