--- a/1/A/07.tex
+++ b/1/A/07.tex
@@ -62,10 +62,11 @@ $\cos\alpha>0$，$W>0$，即力对物体做正功．人推车前进的时候，$
 
 \subsection*{练习一}
 \begin{enumerate}
-    \item 在起重机的钢绳上挂着重物，当重物静止时，钢绳的拉力有没有做功？重力有没有做功？
+    \item 在起重机的钢绳上挂着重物．
+    当重物静止时，钢绳的拉力有没有做功？重力有没有做功？
 
     在水平桌面上滚动的小球，桌面对球的支持力有没有做功？重力有没有做功？
-    \item 在厘米$\cdot$克$\cdot$秒制中，功的单位叫做\NoteBold{尔格}（$\UergA$）．1尔格是1达因（$\Udyn$）的力使物体在力的方向上发生1厘米的位移所做的功．
+    \item 在厘米$\cdot$克$\cdot$秒制中，功的单位叫做\NoteBold{尔格}（$\UergA$）．1尔格是1达因（$\UdynA$）的力使物体在力的方向上发生1厘米的位移所做的功．
     试证明：
     \[1 \UJ=10^7 \Uerg \]
     \item 在水平道路上匀速前进的汽车受到哪些力的作用？其中哪些力做功，哪些力没有做功？哪个力做正功，哪个力做负功？
@@ -135,7 +136,8 @@ $1 \UW = 1 \UJs$．
 \subsection*{练习二}
 \begin{enumerate}
     \item 一台抽水机每秒钟能把30千克的水抽到10米高的水塔上去．抽水机的输出功率是多大？半小时能做多少功？
-    \item 汽车牵引着高射炮以36$\Ukmh$的速度匀速前进，汽车发动机的输出功率是80马力，求汽车和高射炮在前进中所受的阻力．
+    \item 汽车牵引着高射炮以36$\Ukmh$的速度匀速前进．
+    汽车发动机的输出功率是80马力，求汽车和高射炮在前进中所受的阻力．
     \item 一台柴油机装在汽车上，汽车匀速行驶的速度可达90$\Ukmh$；装在汽船上，汽船匀速行驶的速度可达20$\Ukmh$．
     汽车和汽船哪个受的阻力大？二者的阻力之比是多少？
     \item 一台电动机的额定功率是10千瓦，用这台电动机匀速提升$2.7\times 10^3$千克的货物，最大速度是多大？不计空气阻力．
@@ -144,7 +146,8 @@ $1 \UW = 1 \UJs$．
 \section{能量}\label{sec-A-07-energy}
 我们在初中已经初步熟悉了一些形式的能量，如机械能（动能和势能）、热能、电能等等．现在我们要进一步学习有关能量的知识．
 
-能量这个概念在物理学以至整个自然科学中都具有十分重要的意义．人类对这个概念的认识是随着物理学的发展逐步扩大和加深的，同学们学习这个概念，也需要在不断学习的过程中逐步扩大和加深对它的理解．
+能量这个概念在物理学以至整个自然科学中都具有十分重要的意义．人类对这个概念的认识是随着物理学的发展逐步扩大和加深的．
+同学们学习这个概念，也需要在不断学习的过程中逐步扩大和加深对它的理解．
 
 什么是能量？粗浅地说，如果一个物体能够对外界做功，我们就说这个物体具有能量．流动的河水能够推动水轮机而做功，举到高处的铁锤下落时能够把木桩打进土里而做功，被压缩的弹簧放开时能够把物体弹开而做功，内燃机气缸里的高温高压燃气膨胀时能够推动活塞移动而做功．流动的河水，举到高处的铁锤，被压缩的弹簧，高温高压的燃气，都具有能量．
 
@@ -157,7 +160,8 @@ $1 \UW = 1 \UJs$．
 
 \section{动能}
 运动着的物体能够做功，因而具有能量．\NoteUnderWave{物体由于运动而具有的能叫做动能}．运动着的子弹、下落的重锤、流动的河水等等都具有动能．一个重锤，它的速度越大，能够做的功越多．在速度相同的情况下，重锤的质量越大，能够做的功越多．可见动能跟运动物体的速度和质量都有关系，速度越大，
-质量越大，动能就越大，一个质量为$m$的物体，以速度$v$运动时，它的动能是多大呢？
+质量越大，动能就越大．
+一个质量为$m$的物体，以速度$v$运动时，它的动能是多大呢？
 	
 前一节讲过，我们要通过做功来定量地确定能量．设一个原来静止的物体在外力作用下发生一段位移，这时外力对物体做了功．从牛顿第二定律知道，物体在外力的作用下产生加速度，因而在发生这段位移的同时，得到一定的速度，也同时获得了一定的动能．外力对物体做多少功，物体的动能就应该增加多少．我们根据这个就可以定量地确定物体的动能．
 
@@ -173,7 +177,8 @@ $1 \UW = 1 \UJs$．
 \[W=Fs=ma\times \frac{v^2}{2a}=\frac{1}{2}mv^2 \]
 
 我们看到，外力对物体所做的功等于$\dfrac{1}{2}mv^2$这样一个跟
-物体的质量和速度都有关的物理量，在物理学里就用$\dfrac{1}{2}mv^2$
+物体的质量和速度都有关的物理量．
+在物理学里就用$\dfrac{1}{2}mv^2$
 这个物理量来表示物体的\NoteBold{动能}．
 如果用$E_K$表示动能，那么	
 \[E_K=\frac{1}{2}mv^2 \]
@@ -211,7 +216,7 @@ $1 \UW = 1 \UJs$．
 
 可见，\NoteUnderWave{外力对物体所做的功的确等于物体动能的增加}．
 
-上面我们设外力方向与运动方向相同，导出了关系式$W=E_{K2}-E_{K1}$．这个结论对外力方向与运动方向相反的情形同样适用．在这种情形下，外力所做的功是负值，而物体的运动速度减小，动能的增加也是负值．我们知道，外力对物体做负功，往往说成物体克服这个力做了功．因此，对这种情形，也可以说物体克服阻力所做的功等于动能的减少．例如在粗糙平面上运动的小车，在滑动摩擦力的作用下速度减小，这时动能的减少就等于它克服摩擦力所的功．	
+上面我们设外力方向与运动方向相同，导出了关系式$W=E_{K2}-E_{K1}$．这个结论对外力方向与运动方向相反的情形同样适用．在这种情形下，外力所做的功是负值，而物体的运动速度减小，动能的增加也是负值．我们知道，外力对物体做负功，往往说成物体克服这个力做了功．因此，对这种情形，也可以说物体克服阻力所做的功等于动能的减少．例如在粗糙平面上运动的小车，在滑动摩擦力的作用下速度减小，这时动能的减少就等于它克服摩擦力所做的功．	
 	
 上述结论是假定物体只受一个力而推导出来的；如物体不只受到一个力，而是受到几个力，上述结论仍旧正确．只是外力所做的功是指各个力所做的功的代数和，即外力所做的总功．这样，我们得到结论：\NoteBold{外力对物体所做的总功等于物体动能的增加}．这个结论叫做\NoteBold{动能定理}．
 
@@ -296,7 +301,7 @@ $1 \UW = 1 \UJs$．
     大小相等方向相反的外力$F$把物体举到高处（图~\ref{fig_A_7-9}）．因为物体是在相互平衡的力作用下被举高的，物体的速度没有变化，所以它的动能也没有变化．我们知道，
 物体被举高了，它的重力势能要增加，在这个过程中，我们克服重力做了功．克服重力做了多少功，重力势能就增加了多少．把物体举到高度为$h$的地方，克服重力所做的功$W=Fh=mgh$．在物理学里就用$mgh$这个物理量来表示物体的\NoteBold{重力势能}．如果用$E_P$表示重力势能，那么
 \[E_P =mgh\]
-这就是说，\NoteUnderWave{物体的重力势能等于它的重量和高度的乘积，惑者说，等于物体的质量、重力加速度、高度三者的乘积}．物体的质量越大，高度越大，它的重力势能就越大．
+这就是说，\NoteUnderWave{物体的重力势能等于它的重量和高度的乘积，或者说，等于物体的质量、重力加速度、高度三者的乘积}．物体的质量越大，高度越大，它的重力势能就越大．
 
 重力势能也是标量．它的单位也和功的单位相同，在国际单位制中都是焦耳．
 
@@ -338,7 +343,8 @@ $1 \UW = 1 \UJs$．
 \end{figure}
 
 设一个质量是$m$的物体，从原来高度
-是$h_1$的$A$点自由下落到高度是$h_2$的$B$点再水平移到$C$点（图~\ref{fig_A_7-11}），由于物体水平移动中重力并不做功，所以在整个过程中重力对物体所做的功就等于物体由$A$点自由下落到$B$点中重力所做的功：
+是$h_1$的$A$点自由下落到高度是$h_2$的$B$点再水平移到$C$点（图~\ref{fig_A_7-11}）．
+由于物体水平移动中重力并不做功，所以在整个过程中重力对物体所做的功就等于物体由$A$点自由下落到$B$点中重力所做的功：
 \[W_G=mg\Delta h=mgh_1-mgh_2\]
 如果让这个物体沿着斜面滑下（图~\ref{fig_A_7-12}），从原来高度是$h_1$的$A$点滑到高度是$h_2$的$C$点，物体沿斜面滑下的距离是$s$，重力所做的功是
 \[W_G=mg\sin\theta \cdot s=mg\Delta h=mgh_1-mgh_2\]
@@ -412,7 +418,8 @@ W_G&= mg\Delta h_1+mg\Delta h_2+mg\Delta h_3+\cdots\\
     \includegraphics{fig/A/7-15.pdf}
     \caption{}\label{fig_A_7-15}
 \end{figure}
-\item 图~\ref{fig_A_7-16} 表示一个斜抛物体的运动，当物体由抛出位置1运动到最高位置2时，重力所做的功是多少？物体克服重力所做的功是多少？由位置2运动到跟位置1在同一水平面上的位置3时，重力所做的功是多少？由位置1运动到位置3时，重力所做的功是多少？
+\item 图~\ref{fig_A_7-16} 表示一个斜抛物体的运动．
+当物体由抛出位置1运动到最高位置2时，重力所做的功是多少？物体克服重力所做的功是多少？由位置2运动到跟位置1在同一水平面上的位置3时，重力所做的功是多少？由位置1运动到位置3时，重力所做的功是多少？
 \end{enumerate}
 
 \begin{figure}[htbp]
@@ -446,14 +453,14 @@ W_G&= mg\Delta h_1+mg\Delta h_2+mg\Delta h_3+\cdots\\
 	\begin{minipage}[t]{0.46\linewidth}
 		\centering
 		\includegraphics{fig/A/7-18.pdf}
-		\caption{克服弹力做功，弹簧的弹性势能增加。图中$F$表示外力，$f$表示弹力。上图是没有发生形变的弹簧．}\label{fig_A_7-18}
+		\caption{克服弹力做功，弹簧的弹性势能增加．图中$F$表示外力，$f$表示弹力．上图是没有发生形变的弹簧．}\label{fig_A_7-18}
 	\end{minipage}
 	\hfill
 	\begin{minipage}[t]{0.42\linewidth}
 		\centering
 		\centering
 		\includegraphics{fig/A/7-19.pdf}
-		\caption{弹力做功，弹簧的弹性势能减少．图中$f$表示弹力。上图是没有发生形变的弹簧．}\label{fig_A_7-19}
+		\caption{弹力做功，弹簧的弹性势能减少．图中$f$表示弹力．上图是没有发生形变的弹簧．}\label{fig_A_7-19}
 	\end{minipage}
 \end{figure}
 
@@ -464,7 +471,7 @@ W_G&= mg\Delta h_1+mg\Delta h_2+mg\Delta h_3+\cdots\\
 \section{机械能守恒定律}
 \subsection{机械能的相互转化}
 
-动能和势能（重力势能和弹性势能）统称为\NoteBold{机械能}．一种形式的机械能是可以和另一种形式的机械能相互转化的，下面我们看一些例子．
+动能和势能（重力势能和弹性势能）统称为\NoteBold{机械能}．一种形式的机械能是可以和另一种形式的机械能相互转化的．下面我们看一些例子．
 
 物体自由下落或者沿着光滑斜面滑下的时候，重力对物
 体做功，物体的重力势能减少．
@@ -536,8 +543,10 @@ W_G&= mg\Delta h_1+mg\Delta h_2+mg\Delta h_3+\cdots\\
     \caption{}\label{fig_A_7-21}
 \end{figure}
 
-    \item  做下面的实验，把物体拴在细线上悬挂起来，做成
-    一个单摆（图~\ref{fig_A_7-22}）．把物体从平衡位置$O$拉到$B$，放手后观察物体的来回摆动，把铅笔放在位置1和2，可以看到物体仍然要升到跟$B$同样高的$C_1$和$C_2$．解释这个现象．
+    \item  做下面的实验．
+    把物体拴在细线上悬挂起来，做成
+    一个单摆（图~\ref{fig_A_7-22}）．把物体从平衡位置$O$拉到$B$，放手后观察物体的来回摆动．
+    把铅笔放在位置1和2，可以看到物体仍然要升到跟$B$同样高的$C_1$和$C_2$．解释这个现象．
 \begin{figure}[htbp]
     \centering
     \includegraphics{fig/A/7-22.pdf}
@@ -556,7 +565,7 @@ W_G&= mg\Delta h_1+mg\Delta h_2+mg\Delta h_3+\cdots\\
 
 
 \begin{solution}
-    这个问题我们在第\ref{chapter-rectilinear-motion}章已经研究过：现在用机械能守恒
+    这个问题我们在第\ref{chapter-rectilinear-motion}章已经研究过，现在用机械能守恒
 定律来处理．竖直上抛的物体只受重力的作用，因而机械能守恒．
 
 物体抛出时，动能是$\dfrac{1}{2}mv^2_0$ ，重力势能为零，机械能$E_1=\dfrac{1}{2}mv^2_0$．物体达到最大高度$H$时，动能为零，重力势能是$mgH$，机械能$E_2=mgH$．因为$E_1=E_2$，所以
@@ -609,7 +618,7 @@ W_G&= mg\Delta h_1+mg\Delta h_2+mg\Delta h_3+\cdots\\
 \subsection*{练习七}
 \begin{enumerate}
     \item 滑雪运动员从25米高的山坡上滑下，如果阻力忽略不计，他滑到坡底时的速度是多大？
-    \item 物体从高的光滑斜面的顶端滑下，证明物体到达斜面末端时的速度 $v=\sqrt{2gH}$．
+    \item 物体从高$H$的光滑斜面的顶端滑下，证明物体到达斜面末端时的速度 $v=\sqrt{2gH}$．
     \item 蒸汽打桩机的重锤的质量是250千克，把它提升到离地面25米高处，然后让它自由落下．计算：
     \begin{enumerate}
         \item 重锤在最高点的动能、重力势能和机械能．
@@ -623,9 +632,9 @@ W_G&= mg\Delta h_1+mg\Delta h_2+mg\Delta h_3+\cdots\\
 \section{功和能}\label{sec-A-07-work-and-energy}
 前面我们研究了机械能的守恒，但是我们经常可以看到机械能并不守恒的事例．仔细考察这类事例可以发现，如果除了重力还有其他力对物体做功，物体的动能和重力势能之和，即物体的机械能，就发生变化．
 
-火车在水平的轨道上开出，重力势能没有变化，动能越来越大，机械能在不断增加．火车机械能的增加是因为牵引力对它做了功，牵引力做多少功，火车的机械能就增加多少．
+火车在水平的轨道上开出，重力势能没有变化，动能越来越大，机械能在不断增加．火车机械能的增加是因为牵引力对它做了功．牵引力做多少功，火车的机械能就增加多少．
 
-起重机加速提升重物，重物的动能和重力势能都越来越大，机械能在不断增加．重物机械能的增加是因为钢索的拉力对它做了功，拉力做多少功，重物的机械能就增加多少．
+起重机加速提升重物，重物的动能和重力势能都越来越大，机械能在不断增加．重物机械能的增加是因为钢索的拉力对它做了功．拉力做多少功，重物的机械能就增加多少．
 
 跳伞员在张开降落伞后匀速下降，动能没有变化，重力势
 能越来越小，他的机械能在不断减少．跳伞员机械能的减少是因为他克服空气阻力做了功．克服空气阻力做了多少功，机械能就减少多少．
@@ -680,8 +689,9 @@ W_G&= mg\Delta h_1+mg\Delta h_2+mg\Delta h_3+\cdots\\
 试证明：这时要把飞机、轮船的最大速度增大到2倍，发动机的额定功率要增大到8倍才行．这就是在增大飞机、轮船等交通工具的速度方面，每取得一个新的成就都很不容易的原因．
 \item 一辆汽车沿着平直的道路行驶，遇有紧急情况而刹车，刹车后轮子只滑动不滚动．
 从刹车开始到汽车停下来，汽车前进12米．已知轮胎与路面之间的滑动摩擦系数$\mu=0.7$．求刹车前汽车的行驶速度．不计空气阻力．
-\item 一辆5吨的载重汽车开上一个坡路，坡路长$s=100$米．
-坡顶和坡底的高度差$h=10$米，汽车上坡前的速度是10$\Ums$，上到坡顶时减为5.0$\Ums$．汽车受到的摩擦阻力是车重的$k=0.05$倍．求汽车的牵引力．取$g=10\Umsq$．
+\item 一辆5吨的载重汽车开上一个坡路，坡路长$s=100 \Um $．
+坡顶和坡底的高度差$h=10 \Um $．
+汽车上坡前的速度是10$\Ums$，上到坡顶时减为5.0$\Ums$．汽车受到的摩擦阻力是车重的$k=0.05$倍．求汽车的牵引力．取$g=10\Umsq$．
  
 讨论：在这个题目里，汽车的牵引力做多少功？汽车增加
 的机械能是多少？其中动能和重力势能各是多少？克服摩擦而转化成的热能是多少？
