--- a/fig/A/7-18.tex
+++ b/fig/A/7-18.tex
@@ -24,7 +24,7 @@
   \draw [spring3](0,-1.5)--(5,-1.5);
   \draw[fill=black] (6.5/2,.5) circle (1.5pt);  \draw [fill=black] (10.5/2,-1.5) circle (1.5pt);
   \draw [<->, thick]  (6.5/2+.8,.5)node[right]{$f$}-- (6.5/2-1.1,.5)node[above]{$F$};
-  \draw [<->, thick]  (10.5/2+1,-1.5)node[right]{$F$}-- (10.5/2-.8,-1.5)node[above]{$f$};
+  \draw [<->, thick]  (10.5/2+1,-1.5)node[right]{$F$}-- (10.5/2-.8,-1.5)node[above]{$f^{\prime}$};
   \draw [->] (6.2/2+.3, 1.1)--(6.5/2-.3, 1.1);
   \draw [->] (10.5/2-.3, -1.1)--(10.5/2+.3,-1.1);
 \end{tikzpicture}
