--- a/fig/A/7-5a.tex
+++ b/fig/A/7-5a.tex
@@ -15,6 +15,6 @@
   \draw [dashed] (2,0.6)--(4,0.6);
   \draw [->] (2,0.6)--++(30:2.0)node [right]{$F$};
   \draw [->] (1.5, 1.5)--(2.5,1.5) node [right]{$v$};
-  \draw (2.4,0.6) arc(0:30:.4) node[at start,above right]{\ang{30}};
+  \draw (2.4,0.6) arc(0:30:.4) node[at start,above right,yshift=-0.9]{\ang{30}};
 \end{tikzpicture}
 \end{document}
