--- a/fig/A/7-5b.tex
+++ b/fig/A/7-5b.tex
@@ -15,6 +15,6 @@
   \draw [dashed] (2,0.6)--(4,0.6);
   \draw [->] (2,0.6)--++(120:1.5)node [left]{$F$};
   \draw [->] (1.8, 1.5)--(2.5,1.5) node [right]{$v$};
-  \draw (2.4,0.6) arc(0:120:.4) node[midway,right]{\ang{120}};
+  \draw (2.4,0.6) arc(0:120:.4) node[midway,right,yshift=0.8]{\ang{120}};
 \end{tikzpicture}
 \end{document}
