--- a/fig/A/7-12.tex
+++ b/fig/A/7-12.tex
@@ -19,6 +19,6 @@
   \draw (-1,4)--(1,4);
   \draw (0,1)--(1,1);
   \draw (1,4)--(6,1);
-  \draw (6-.75,1) arc (180:150:.75)node[left]{$\theta$};
+  \draw (6-.75,1) arc (180:150:.75)node[left,yshift=-0.1cm]{$\theta$};
 \end{tikzpicture}
 \end{document}
