样式：恢复图表标题的默认间距

--- a/retypeset.cls
+++ b/retypeset.cls
@@ -141,8 +141,8 @@
 \setcounter{tocdepth}{1}
 \setcounter{secnumdepth}{3}
 
-\setlength{\abovecaptionskip}{0.cm}
-\setlength{\belowcaptionskip}{-0.cm}
+%\setlength{\abovecaptionskip}{0.cm}
+%\setlength{\belowcaptionskip}{-0.cm}
 
 \ctexset {
     section = {
