--- a/1/A/09.tex
+++ b/1/A/09.tex
@@ -194,7 +194,7 @@
 可以得到
 \[T=2\pi\sqrt{\frac{\ell}{g}}\]
 
-这就是单摆的周期公式，它表明\NoteUnderWave{在摆角很小的情况下}\footnote{根据周期公式算出的$T$值与实际测定值间的误差，随摆角增大而增大，摆角为7$^\circ$时，误差为0.1\%；15$^\circ$时，0.5\%；28$^\circ$时，1\%．单摆最大摆角一般应小于5$^\circ$.}，\NoteUnderWave{单摆的周期跟摆长的平方根成正比，跟重力加速度的平方根成反比，而跟摆锤的质量、振幅无关}．
+这就是单摆的周期公式，它表明\NoteUnderWave{在摆角很小的情况下}\footnote{根据周期公式算出的$T$值与实际测定值间的误差，随摆角增大而增大．摆角为7$^\circ$时，误差为0.1\%；15$^\circ$时，0.5\%；28$^\circ$时，1\%．单摆最大摆角一般应小于5$^\circ$.}，\NoteUnderWave{单摆的周期跟摆长的平方根成正比，跟重力加速度的平方根成反比，而跟摆锤的质量、振幅无关}．
 
 在一定的地点，$g$的值一定，一定摆长的单摆就有恒定不变的周期．摆的这个性质被利用在摆钟上计量时间．相反，如果测出摆长$\ell$和周期$T$，也可以利用单摆的周期公式确定$g$的值．由于单摆的摆长$\ell$和周期$T$都容易测量，所以利用单摆可以很方便地测定重力加速度$g$的值，不像利用自由落体运动测$g$那样麻烦．
 
@@ -222,7 +222,7 @@
 
 多数情况下，两个简谐振动的步调并不一致，即它们的相
 不同，或者说它们存在着\NoteBold{相差}．其中有一种特殊情形，即振动步调正好相反，这种情形叫做\NoteBold{反相}．两个摆长相等的单摆，一个从平衡位置右侧，另一个从平衡位置左侧同时被释放，它们
-的振动步调就正好相反（图~\ref{fig_A_9-5}）．它们的运动方向总是相反的；一个从右向左经过平衡位置的时候，另一个正好从左向右经过平衡位置；一个到达左侧最大位移的时候，另一个正好到达右侧的最大位移等等．
+的振动步调就正好相反（图~\ref{fig_A_9-5}）．它们的运动方向总是相反的：一个从右向左经过平衡位置的时候，另一个正好从左向右经过平衡位置；一个到达左侧最大位移的时候，另一个正好到达右侧的最大位移等等．
 \begin{figure}[htbp]
     \centering
     \includegraphics{fig/A/9-5.pdf}
@@ -251,7 +251,7 @@
     \caption{简谐振动的图像}\label{fig_A_9-7}
 \end{figure}
 
-振动图像表示出振子对平衡位置的位移怎样随时间面变
+振动图像表示出振子对平衡位置的位移怎样随时间而变
 化，它可以告诉我们在任一时刻振子对平衡位置的位移．
 可见，振动图像直观地表示出了振动的情况．
 
@@ -290,8 +290,8 @@
     \item 图~\ref{fig_A_9-10} 的振动图像是一条余弦曲线．
     你能不能应用学过的数学知识算出下列时刻振子对平衡位置的位移？
     \begin{enumerate}
-        \item $t=0.5$秒；
-        \item $t=1.5$秒．
+        \item $t=0.5 \Us $；
+        \item $t=1.5 \Us $．
     \end{enumerate}
 
     提示：想一想在图~\ref{fig_A_9-10} 中，1秒、2秒等时刻相当于余弦函数的多大的角度．
@@ -360,17 +360,17 @@
     \caption{受迫振动}\label{fig_A_9-12}
 \end{figure}
 
-受迫振动的频率跟什么有关系呢？我们用图~\ref{fig_A_9-12} 所示的装置来研究这个问题．匀速地转动把手，把手就给弹簧振子以周期性的策动力，使振子做受迫振动．这个策动力的周期跟把手转动的周期是相同的．用不同的转速匀速转动把手，可以看到，振子做受迫振动的周期总等于策动力的周期．所以，\NoteUnderWave{物体做受迫振动的频率等于策动力的频率，而跟物体的固有频率没有关系}．
+受迫振动的频率跟什么有关系呢？我们用图~\ref{fig_A_9-12} 所示的装置来研究这个问题．匀速地转动把手，把手就给弹簧振子以周期性的驱动力，使振子做受迫振动．这个驱动力的周期跟把手转动的周期是相同的．用不同的转速匀速转动把手，可以看到，振子做受迫振动的周期总等于驱动力的周期．所以，\NoteUnderWave{物体做受迫振动的频率等于驱动力的频率，而跟物体的固有频率没有关系}．
 
 利用受迫振动来得到持续的周期性振动的例子是非常多
 的．例如缝纫机针持续地上下振动，空气压缩机活塞持续地往
-复振动，都是周期性策动力作用的结果．
+复振动，都是周期性驱动力作用的结果．
 
 \subsubsection{共振}
 
 难道物体做受迫振动时它的固有频率对振动毫无影响吗？我们用图~\ref{fig_A_9-13} 所示的装置研究这个问题．
 
-在一根张紧的绳上挂几个摆，其中$A$、$B$、$G$的摆长相等．当$A$摆动的时候，$A$的振动通过张紧的绳给其余各摆施加周期性的策动力，其余各摆就做受迫振动．策动力的频率等于$A$摆的频率，决定于它的摆长．其他各摆的固有频率，也都决定于自己的摆长．可以发现，固有频率跟策动力频率相等的$B$、$G$，振幅最大，固有频率跟策动力频率相差最大的$D$、$E$，振幅最小．
+在一根张紧的绳上挂几个摆，其中$A$、$B$、$G$的摆长相等．当$A$摆动的时候，$A$的振动通过张紧的绳给其余各摆施加周期性的驱动力，其余各摆就做受迫振动．驱动力的频率等于$A$摆的频率，决定于它的摆长．其他各摆的固有频率，也都决定于自己的摆长．可以发现，固有频率跟驱动力频率相等的$B$、$G$，振幅最大，固有频率跟驱动力频率相差最大的$D$、$E$，振幅最小．
 
 \begin{figure}[htbp]
     \centering
@@ -388,27 +388,27 @@
 \end{figure}
 
 
-图~\ref{fig_A_9-14} 的曲线表示出了受迫振动的振幅$A$跟策动力频率$f$的关系：策动力的频率$f$等于振动物体的固有频率$f_{\text{固}}$时振幅最大；策动力的频率跟固有频率相差越大，振幅越小．
+图~\ref{fig_A_9-14} 的曲线表示出了受迫振动的振幅$A$跟驱动力频率$f$的关系：驱动力的频率$f$等于振动物体的固有频率$f_{\text{固}}$时振幅最大；驱动力的频率跟固有频率相差越大，振幅越小．
 
-\NoteUnderWave{当策动力的频率跟物体的固有频率相等的时候，受迫振动的振幅最大，这种现象叫做\NoteBold{共振}．}
+\NoteUnderWave{当驱动力的频率跟物体的固有频率相等的时候，受迫振动的振幅最大，这种现象叫做\NoteBold{共振}．}
 
 共振，每个推过秋千的人都有这种经验．秋千是个摆，有
 它的固有频率．轻推一下使它微微摆动以后，只要按着它的固有频率周期性地施加推力，每当它往回摆时轻轻推它一下，尽管每次的推力都很小，经过一段时间，秋千也会荡得很高，即发生共振．
-这种现象是容易理解的．周期性的策动力跟振动“合拍”时，每一次策动力都跟振动物体的速度方向一致，策动力做的功都是正功，都用来增大振动系统的能量，所以振幅越来越大，直到策动力做功供给振动系统的能量等于克服阻力消耗的能量，振幅才不再增大，即达到最大振幅．当策动力不跟振动“合拍”时，策动力做的功有一部分是负功，因而振动系统从策动力得到的能量比“合拍”时少，振幅也就比“合拍”时小．
+这种现象是容易理解的．周期性的驱动力跟振动“合拍”时，每一次驱动力都跟振动物体的速度方向一致，驱动力做的功都是正功，都用来增大振动系统的能量，所以振幅越来越大，直到驱动力做功供给振动系统的能量等于克服阻力消耗的能量，振幅才不再增大，即达到最大振幅．当驱动力不跟振动“合拍”时，驱动力做的功有一部分是负功，因而振动系统从驱动力得到的能量比“合拍”时少，振幅也就比“合拍”时小．
 
 共振现象有很多应用．在修建桥梁时需要把管柱插入江底作为基础，如果使打桩机打击管柱的频率跟管柱的固有频率一致，管柱就发生共振而激烈振动，使周围的泥砂松动，于是管柱可以比较容易地插下去．
 
 在某些情况下，共振现象可能造成损害．
-例如，当军队或火车过桥的时候，整齐的步伐或车轮对铁轨接头处的撞击，都是周期性的策动力，如果它的频率接近于桥梁的固有频率，就可能使桥的振幅大到桥梁断裂的程度．因此，部队过桥要用便步，以便不产生周期性的策动力．火车过桥要慢开，以便策动力的频率远小于桥的固有频率．又如，轮船航行的时候，会受到周期性的波浪的冲击而左右摇摆．如果这个冲击力的频率跟轮船左右摇摆的固有频率相同，就发生共振，激烈的共振甚至可以使轮船倾覆．这时候可以改变轮船的航行方向和航行速率，使波浪冲击的频率远离轮船摇摆的固有频率．
+例如，当军队或火车过桥的时候，整齐的步伐或车轮对铁轨接头处的撞击，都是周期性的驱动力，如果它的频率接近于桥梁的固有频率，就可能使桥的振幅大到桥梁断裂的程度．因此，部队过桥要用便步，以便不产生周期性的驱动力．火车过桥要慢开，以便驱动力的频率远小于桥的固有频率．又如，轮船航行的时候，会受到周期性的波浪的冲击而左右摇摆．如果这个冲击力的频率跟轮船左右摇摆的固有频率相同，就发生共振，激烈的共振甚至可以使轮船倾覆．这时候可以改变轮船的航行方向和航行速率，使波浪冲击的频率远离轮船摇摆的固有频率．
 
-在需要利用共振的时候，应该使策动力的频率接近或等
+在需要利用共振的时候，应该使驱动力的频率接近或等
 于振动系统的固有频率．
-在需要防止共振危害的时候，要想办法使策动力频率和固有频率不相等，而且相差尽可能多些．
+在需要防止共振危害的时候，要想办法使驱动力频率和固有频率不相等，而且相差尽可能多些．
 
 \subsection*{练习六}
 \begin{enumerate}
     \item 除了书上讲过的自由振动和受迫振动的例子外，再各举两个实例．
-    \item 仿照图~\ref{fig_A_9-13} 所示的研究共振现象的装置，自己利用手边的材料来做实验，观察受迫振动的振幅跟策动力频率之间的关系．
+    \item 仿照图~\ref{fig_A_9-13} 所示的研究共振现象的装置，自己利用手边的材料来做实验，观察受迫振动的振幅跟驱动力频率之间的关系．
     \item 汽车的车身是装在弹簧上的，如果它的固有周期是1.5秒，汽车在一条起伏不平的路上行驶，路上各凸起处相隔的距离都大约是8米，那么汽车以多大的速度行驶时车身的起伏振动最激烈？
 \end{enumerate}
 
@@ -740,7 +740,7 @@
 
 可见，\NoteUnderWave{能够发生明显的衍射现象的条件是：障碍物或孔的尺寸跟波长相差不多}．
 
-\NoteUnderWave{一切波都发生衍射，衍射也是波的特有现象}．
+\NoteUnderWave{一切波都能发生衍射，衍射也是波的特有现象}．
 
 \section{声学的初步知识}
 \subsection{声波}
@@ -816,8 +816,8 @@
 \end{table}
 
 声波在不同媒质中的传播速率是不同的（表~\ref{tab_A_9-3}）．
-声波在0$^\circ {\rm C}$空
-气里的传播速率是332$\Ums$，20$^\circ {\rm C}$时是344$\Ums$，30$^\circ {\rm C}$时
+声波在$ 0 \Ucede $空
+气里的传播速率是332$\Ums$，$20 \Ucede$时是344$\Ums$，$30 \Ucede $时
 是349$\Ums$．声波在水里的传播速率大约是空气里的四倍
 半，在金属里传播速率更大．
 
@@ -949,7 +949,7 @@
 \item 人能听到的声音的最高频率是20000赫．狗能听到
 的声音的最高频率是50000赫．蝙蝠能发出并且能听到的声
 音频率高达120000赫．分别求出人、狗、蝙蝠能听到的，在
-0$^{\circ}$C空气中传播的声波的最短波长．
+$0 \Ucede$空气中传播的声波的最短波长．
 \item 在一次如图~\ref{fig_A_9-29} 所示的空气柱共鸣的实验中，测得
 共鸣时空气柱的最短长度为19厘米，声波的波长有多长？已
 知音叉的频率是440赫，空气中的声速有多大？
@@ -996,7 +996,7 @@
 取两只完全相同的音叉，在一只的叉股上裹一小条铜片．
 用同样大小的力敲这两只音叉，听起来没包铜片的音调高，包
 了铜片的音调低．仔细观察它们的振动会发现，音调高的振
-动得快，频率大；音调的振动得慢，频率小．如果眼晴区分
+动得快，频率大；音调低的振动得慢，频率小．如果眼晴区分
 不清音叉振动的快慢，还可以做图~\ref{fig_A_9-32} 所示的实验．装在同
 一根轴上的四个齿轮，自上而下，齿数分别为80、60、50、40．
 当这四个齿轮一起旋转时，用一张硬纸片依次接触这四个齿
@@ -1009,7 +1009,8 @@
 \end{figure}
 
 上面的实验告诉我们：人们对音调的感觉客观上决定于
-振动的频率．频率不同，产生的效果也不同，频率越大，音调
+振动的频率．频率不同，产生的效果也不同．
+频率越大，音调
 就越高，
 
 我们的耳朵能够听到的声音的频率范围是从20赫到
@@ -1101,7 +1102,7 @@ $10^{-12} \UWmq $
 线和声谱，它是由100赫的基音和9个频率为基音整数倍的
 泛音组成的．
 
-可见：音品是由泛音的多少、泛音的频率和振幅决定的．
+可见，音品是由泛音的多少、泛音的频率和振幅决定的．
 
 知道了音品是由什么决定的，根据某种声音的声谱就可
 以模仿出这种声音来．利用若干音叉，根据钢琴声的声谱把
@@ -1113,7 +1114,8 @@ $10^{-12} \UWmq $
 
 \subsection*{阅读材料：声强级}
 对人耳最敏感的声波的频率在3000赫左右，在这个频率
-附近引起听觉的声强范围最大，大约是从$10^{-12} \UWmq $到$1 \UWmq $，在这个大范围内比较两个声强，如果直接用倍数来表
+附近引起听觉的声强范围最大，大约是从$10^{-12} \UWmq $到$1 \UWmq $．
+在这个大范围内比较两个声强，如果直接用倍数来表
 示，数字要很大，用起来不方便．为了方便，常用两个声强之
 比的对数来比较声强．
 
@@ -1255,7 +1257,7 @@ $30\sim 40$分贝．
 简谐振动的周期公式是什么？单摆的周期公式是什么？
 
 \item 从能量的观点说明简谐振动的特点．
-\item 什么叫阻尼振动？什么叫受迫派动？受迫振动的频率等于什么？在什么情况下发生共振？举出共振的实例．
+\item 什么叫阻尼振动？什么叫受迫振动？受迫振动的频率等于什么？在什么情况下发生共振？举出共振的实例．
 \item 机械波是怎样产生的？为什么说波是传递能量的一种方式？什么叫横波和纵波？举出横波和纵波的实例．
 \item 波长、频率和波速之间的关系是怎样的？沿着波的传播方向，两个相邻的同相质点间的距离等于多长？两个相邻的反相质点间的距离等于多长？
 \item 说明振动图像和波动图像的意义，并加以比较．
@@ -1295,7 +1297,7 @@ $10g$的加速度．
 车厢和载重共重55吨，每段铁轨长12.5米．
 火车沿轨道做
 匀速运动时，它的危险速度是多少$\UkmhA$？
-\item 已知0$^{\circ}$C时空气中的声速是332$\Ums$，水中的声速
+\item 已知$0 \Ucede $时空气中的声速是332$\Ums$，水中的声速
 是1450$\Ums$．
 声波由空气传入水中时波长变化了多少倍？
 \item $A$、$B$、$C$三点分别距声源$S$为 40厘米、52.5厘米、65
