--- a/1/A/02.tex
+++ b/1/A/02.tex
@@ -1157,7 +1157,8 @@ $s=\frac{1}{2} v t$，
 \item 从长3.0米的斜面顶端由静止滚下来的小球，末速度是2.5$\Ums$，求小球滚动所用的时间．
 \item 一辆汽车以12$\Ums$的速度行驶，走到一个下坡，得到0.40$\Umsq$的加速度，汽车通过下坡末端的速度是16$\Ums$，这个下坡的长度是多长？
 \item 子弹射中墙壁前的速度是400$\Ums$，射到墙壁后穿进墙壁20厘米，子弹在墙内的运动可以看作匀变速运动，求子弹在墙壁内的加速度和运动时间．
-\item 试证明做匀变速运动的物体在一段时间内的平均速度等于这段时间的中间时刻的瞬时速度．
+\item \label{exer_A_02-9-5}
+试证明做匀变速运动的物体在一段时间内的平均速度等于这段时间的中间时刻的瞬时速度．
 
 提示：从这段时间开始的时刻计时，在该时刻$t=0$，速
 度为$v_0$．设这段时间为$t$，物体在这段时间内发生的位移$s=v_0t +\frac{1}{2}at^2$，利用平均速度的定义式$\bar v=s/t$，求出这段时间内的平均速度，即可证明．不用位移公式，你能不能证明？
