--- a/1/A/app_01.tex
+++ b/1/A/app_01.tex
@@ -125,7 +125,7 @@ $3.65\times 10^4$千米．
 计的了．因此，用这种游标卡尺测长度可以准确到0.1毫米．
 
 
-常用的游标卡尺还有别的测度方法，但使用原理跟上面讲的完全相同．有的游标尺上有20个小的等分刻度，它的每一分度比主尺的最小分度1毫米相差0.05毫米．
+常用的游标卡尺还有别的刻度方法，但使用原理跟上面讲的完全相同．有的游标尺上有20个小的等分刻度，它的每一分度比主尺的最小分度1毫米相差0.05毫米．
 使用时，整的毫米数由主尺上读出，再看游标的第几条刻线与主尺某一刻线重合，毫米以下的长度就是二十分之几毫米．用这种游标卡尺测长度可以准确到0.05毫米．还有一种游标尺上有50个小的等分刻度，它的每一分度比主尺的最小分度1毫米相差0.02毫米．
 你能说明这种游标卡尺的使用方法吗？用它测长度可以准确到多少？
 
@@ -155,7 +155,8 @@ $3.65\times 10^4$千米．
 \end{figure}
 
 
-精密螺纹的螺距是0.5毫米，即旋钮每转一周，测微螺杆$F$ 前进或后退0.5毫米，可动刻度分成50等分，每一等分表示0.01毫米，这样每转两周，转过100等分时，前进或后退的距离正好是1毫米．
+精密螺纹的螺距是0.5毫米，即旋钮每转一周，测微螺杆$F$ 前进或后退0.5毫米．
+可动刻度分成50等分，每一等分表示0.01毫米，这样每转两周，转过100等分时，前进或后退的距离正好是1毫米．
 
 当$A$和$P$并拢时，如果可动刻度$H$的零点恰好跟固定刻度$S$的零点重合，旋出测微螺杆$P$，并使$A$和$P$的面正好接触待测长度的两端，那么$P$向右移动的距离就是所测的长度．
 这个距离的整的毫米数由固定刻度$S$上读出，小数部分则由可动刻度$H$上读出．
@@ -253,7 +254,11 @@ $3.65\times 10^4$千米．
 	\caption{}\label{tab_A_10-3}
     \begin{tblr}{|c|c|c|c|c|}
         \hline
-        $s_1$（$\UmA$）&$s_2$（$\UmA$）&$s_3$（$\UmA$）&$s_4$（$\UmA$）&$s_5$（$\UmA$）\\
+        {$A$和$ B $的\\距离$s_1$（$\UmA$）}
+        &{$B$和$ C $的\\距离$s_2$（$\UmA$）}
+        &{$C$和$ D $的\\距离$s_3$（$\UmA$）}
+        &{ $D$和$ E $的\\距离$s_4$（$\UmA$）}
+        &{$ E $和$ F $的\\距离$s_5$（$\UmA$）}\\
         \hline
 		&&&&\\
         \hline
@@ -290,7 +295,7 @@ $3.65\times 10^4$千米．
 
 怎样来判断小车是否做匀变速运动呢？如图~\ref{fig_A_10-10} 所示，我们在纸带上任意选取几个连续计数点$A $，$ B $，$ C $，$ D $，$ E $，$ \cdots$．
 用尺量出相邻计数点间的距离$s_1 $，$ s_2 $，$ s_3 $，$ s_4 $，$ \cdots$，再算出相邻的距离之差$\Delta s_1=s_2-s_1 $，$ \Delta s_2=s_3-s_2 $，$ \Delta s_3=s_4-s_3 $，$ \cdots$．
-我们知道，如果小车做匀变速运动，加速度是$a$，那么，在连续相等的时间$T$内，$\Delta s_1=\Delta s_2=\Delta s_3=\cdots=aT^2$（见第\ref{chapter-rectilinear-motion}章，练习九，第6题）．
+我们知道，如果小车做匀变速运动，加速度是$a$，那么，在连续相等的时间$T$内，$\Delta s_1=\Delta s_2=\Delta s_3=\cdots=aT^2$（见第\ref{chapter-rectilinear-motion}章，练习九，第 \ref{exer_A_02-9-6} 题）．
 在这个实验里，$T$就是打点计时器每打五个点所用的时间．
 可见，根据$\Delta s_1 $，$ \Delta s_2 $，$ \Delta s_3 $，$ \cdots$是否相等，就可以判断小车是否做匀变速运动．
 设计一个表格，把测出的$s_1 $，$ s_2 $，$ s_3 $，$ \cdots$的数值和算出的$\Delta s_1 $，$ \Delta s_2 $，$ \Delta s_3 $，$ \cdots$的数值填入表内．
@@ -298,7 +303,7 @@ $3.65\times 10^4$千米．
 
 下面我们利用速度图像来求小车的加速度．
 先求出以$A$为起点，小车经过$T $，$ 2T $，$ 3T $，$ \cdots$时的瞬时速度$v_1 $，$ v_2 $，$ v_3 $，$ \cdots$，即打点计时器打下$B $，$ C $，$ D $，$ \cdots$各点时的瞬时速度．
-小车是做匀变速直线运动，它在某一段时间内的平均速度等于这段时间中点时刻的瞬时速度（见第\ref{chapter-rectilinear-motion}章，练习九，第5题）．
+小车是做匀变速直线运动，它在某一段时间内的平均速度等于这段时间中点时刻的瞬时速度（见第\ref{chapter-rectilinear-motion}章，练习九，第 \ref{exer_A_02-9-5} 题）．
 所以
 \[v_1=\frac{s_1+s_2}{2T}, \quad  v_2=\frac{s_2+s_3}{2T},  \quad v_3=\frac{s_3+s_4}{2T},  \quad  \cdots\]
 打点计时器每隔0.02秒打一个点，所以$T=0.02 \Us \times 5=0.1\Us$．
@@ -370,7 +375,7 @@ $3.65\times 10^4$千米．
 根据记下的小球穿过孔的一系列位置，用平滑的曲线画出小球做平抛运动的轨迹．
 
 我们知道，平抛运动可以看作是两个分运动的合运动：一个是水平方向的匀速直线运动，速度等于平抛物体的初速度；另一个是竖直方向的自由落体运动．
-这样，测出曲线上某一点的坐标$x$和$y$，已知$g$的数值，利用公式$y=\dfrac{1}{2}gt^2$和$x=vt$
+这样，测出曲线上某一点的坐标$x$和$y$，已知$g$的数值，利用公式$y=gt^2/2$和$x=vt$
 就可以求出小球的水平分速度，这个分速度就是小球做平抛运动的初速度．
 
 在曲线上选取几个不同的点，测出它们的坐标．用上述办法分别求出小球的初速度，最后算出平均值．
@@ -392,7 +397,7 @@ $3.65\times 10^4$千米．
 然后，用手指搓动转轴，使重锤转动，并且保持重锤每转一周都从指示器的正上方通过．这时，可以看作重锤在做半
 径为$r$的匀速圆周运动．
 测量重锤转100圈需要的时间，测
-量三次，靠出其平均时间$t$．利用公式$\omega=200\pi/t$（自己推导这个公式）计算出$\omega$．将实验得到的$m$、$r$和$\omega$代入向心力公式，算出向心力$F$．
+量三次，算出其平均时间$t$．利用公式$\omega=200\pi/t$（自己推导这个公式）计算出$\omega$．将实验得到的$m$、$r$和$\omega$代入向心力公式，算出向心力$F$．
 
 停止转动后，用测力计钩住重锤，把它水平拉到指示器的正上方，这时测力计测得的拉力$F'$就是重锤做半径为$r$的匀速圆周运动所需的向心力．
 
@@ -442,7 +447,7 @@ $3.65\times 10^4$千米．
 在纸带上选取方便的5个连续点$A $，$ B $，$ C $，$ D $，$ E$．
 测出相邻两点间的距离
 $s_1 $，$ s_2 $，$ s_3 $，$ s_4$．
-再用实验\ref{sec-A-app-1-7-study of-uniformly-variable-linear-motion}的方法分别算出打点计时器在打$B,C,D$各点时，重物的下落速度
+再用实验\ref{sec-A-app-1-7-study of-uniformly-variable-linear-motion}的方法分别算出打点计时器在打$B $，$ C $，$ D$各点时，重物的下落速度
 \[v_1=\frac{s_1+s_2}{2t},\quad v_2=\frac{s_2+s_3}{2t},\quad v_3=\frac{s_3+s_4}{2t}\qquad (t=0.02 \Us) \]
 把测量和算出的数据填入自己设计的表格里．算出重物增加的动能
 \[\frac{1}{2}mv_1^2, \quad \frac{1}{2}mv_2^2, \quad \frac{1}{2}mv_3^2\]
