A/app_02 and A/app_03

--- a/1/A/app_02.tex
+++ b/1/A/app_02.tex
@@ -14,7 +14,7 @@
 
 
 用手拉着尼龙丝的另一端，并沿着箭头$a$所示的方向拉尼龙丝．
-当逐渐拉紧尼龙丝时，$\alpha$角增大，力$F$也随着增大．用量角器量自尼龙丝刚刚被扯断时的$\alpha$角，就可以知道尼龙丝的抗断拉力．
+当逐渐拉紧尼龙丝时，$\alpha$角增大，力$F$也随着增大．用量角器量出尼龙丝刚刚被扯断时的$\alpha$角，就可以知道尼龙丝的抗断拉力．
 
 
 
@@ -28,7 +28,7 @@
 
 细心地调整阀门，使第一个水滴碰到盘子的瞬间，第二个水滴正好从阀门处开始下落．你一边听水滴碰盘子的响声，一边注视着阀门处的水滴，就很容易做到这一点．这样调整好之后，水滴从阀门落到盘子经过的时间，就正好等于相继滴下的两个水滴之间的时间间隔．
 
-数出在半分钟或一分钟内滴下的水滴的数目，或者测出下落$50 \sim 100$个水滴经过的时间，就可以算出水滴下落的时间$t$．用米尺量出水滴下落的距离$h$．将$t$、$h$值代入公式$h=\dfrac{1}{2}gt^2$中，就可以计算出重力加速度$g$．
+数出在半分钟或一分钟内滴下的水滴的数目，或者测出下落$50 \sim 100$个水滴经过的时间，就可以算出水滴下落的时间$t$．用米尺量出水滴下落的距离$h$．将$t$、$h$值代入公式$h=gt^2/2$中，就可以计算出重力加速度$g$．
 
 \section{用秒表测量玩具手枪子弹射出的速度}
 根据你学过的竖直上抛运动的知识，用一只秒表就可以简便地测出玩具手枪子弹射出的速度．
