--- a/1/A/app_03.tex
+++ b/1/A/app_03.tex
@@ -12,13 +12,13 @@
 导出量的单位叫做\NoteBold{导出单位}．
 
 
-所谓单位制，就是有关基本单位、导出单位等一系列单位
+所谓\NoteBold{单位制}，就是有关基本单位、导出单位等一系列单位
 的体制．
 由于所采用的基本量的不同，基本单位的不同，以及
 用来推导导出单位的定义公式的不同，存在着多种单位制．多
 种单位制并用，给科学技术的交流和发展带来不便．
 为了避免多种单位制的并存，国际上制订了一种通用的适合一切计
-量领域的单位制，叫做国际单位制，国际代号为SI．国际单
+量领域的单位制，叫做\NoteBold{国际单位制}，国际代号为SI．国际单
 位制是1960年第十一届国际计量大会通过的，其后并向全世
 界推荐使用．
 现在世界上许多国家采用了国际单位制或者正
@@ -101,7 +101,7 @@
 如果用$L $，$ M $，$ T$分别表示这三个基本量，那么，一个物理量$Q$
 的量纲式的一般形式就是
 \[[Q]=\qty[L^{\alpha}M^{\beta}T^{\gamma}]\]
-其中$\alpha, \beta, \gamma$分别叫做物理量$Q$对于长度、质量、时间的\NoteBold{量纲}．
+其中$\alpha $，$  \beta $，$  \gamma$分别叫做物理量$Q$对于长度、质量、时间的\NoteBold{量纲}．
 
 下面举出几个物理量的量纲式：
 \begin{itemize}
