第一册二校完成

--- a/1/A/preface.tex
+++ b/1/A/preface.tex
@@ -39,10 +39,17 @@
 	\flushright
 	\begin{tblr}{c}
 		水   \\
-		\today
+		2025年8月1日
 	\end{tblr}
 \end{center}
-
+常读常新，爱不释手，二校完成，趋于至善．
+\begin{center}
+	\flushright
+	\begin{tblr}{c}
+		水   \\
+		2025年11月11日
+	\end{tblr}
+\end{center}
 \chapter{引言——怎样学好物理知识}
 
 我们在初中学了两年物理，学习了一些物理概念，如质
