--- a/fig/A/1-39.tex
+++ b/fig/A/1-39.tex
@@ -16,7 +16,7 @@
   \draw[semithick](-0.406,0.8)--(0,-1.5)--(0.406,0.8)--cycle;
   \draw[thin,<->](-0.406,0.4)--(0.406,0.4)node[midway,above]{$d$};
   \draw[thin](0.406,0.3)--(0.406,0.8)(-0.406,0.3)--(-0.406,0.8)(0,-1.5)--++(-10:1.2)(0.406,0.8)--++(-10:1.2);
-  \draw[thin,<->]([shift=(-10:1.0)]0,-1.5)--([shift=(-10:1.0)]0.406,0.8)node[midway,sloped,above]{$l$};
+  \draw[thin,<->]([shift=(-10:1.0)]0,-1.5)--([shift=(-10:1.0)]0.406,0.8)node[midway,sloped,above]{$\ell$};
   \fill[pattern =north west lines](0,-1.7)--++(80:1.8)arc(170:90:0.3)--++(0.5,0)--++(0,-0.25)-++(-0.5,0)arc(90:170:0.05)--++(260:2.0)--++(-0.2,0)--cycle;
   \draw(0,-1.7)--++(80:1.8)arc(170:90:0.3)--++(0.5,0);
   \fill[pattern =north west lines](0,-1.7)--++(100:1.8)arc(10:90:0.3)--++(-0.5,0)--++(0,-0.25)-++(0.5,0)arc(90:10:0.05)--++(-80:2.0)--++(0.2,0)--cycle;
